--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,7 +5,7 @@
   <div class="option-container mt-3 mb-4">
     <a class="option-links" (click)="onCategorySelect('software')">SOFTWARE</a>
     <a class="option-links" (click)="onCategorySelect('auriculares')">AURICULARES</a>
-    <a class="option-links" (click)="onCategorySelect('microfono')">MICRÓFONOS</a>
+    <a class="option-links" (click)="onCategorySelect('microfonos')">MICRÓFONOS</a>
     <a class="option-links" (click)="onCategorySelect('midi')">MIDI</a>
     <a class="option-links" (click)="onCategorySelect('cables')">CABLES</a>
     <a class="option-links" (click)="onCategorySelect('ofertas')">OFERTAS</a>
