--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <app-navbar/>
 <div class="products-container">
-  <app-product-category/>
+  <router-outlet></router-outlet>
 </div>
 <app-footer/>
