--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -29,7 +29,8 @@
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li class="ms-4"><a routerLink="/userProfile/orders" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ver pedidos</a></li>
             <li class="ms-4"><a routerLink="/userProfile/checkOrderStatus"  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ver estado</a></li>
-            <li class="ms-4"><a class="link-body-emphasis d-inline-flex text-decoration-none rounded">Escribir reseña</a></li>
+            <li class="ms-4"><a routerLink="/userProfile/reviews"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Escribir reseña</a></li>
           </ul>
         </div>
       </li>
