--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -10,15 +10,10 @@
       </li>
       <li class="border-top my-1"></li>
       <li class="mb-1">
-        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false"
+        routerLink="/userProfile/wishlist">
           Wishlist
         </button>
-        <div class="collapse" id="dashboard-collapse">
-          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li class="ms-4"><a routerLink="/userProfile/createWishlist" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Crear lista</a></li>
-            <li class="ms-4"><a routerLink="/userProfile/wishlist" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Ver listas</a></li>
-          </ul>
-        </div>
       </li>
       <li class="border-top my-1"></li>
       <li class="mb-1">
