--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import "primeng/resources/primeng.css";
+
 
 body{
   max-width: 1920px;
@@ -8,3 +8,6 @@ body{
   font-family:  "Roboto", sans-serif;
   min-height: 100vh;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
